# facedet-squeezenet

./: CMakeLists.txt  squeezenet_train.cpp
